[tool.poetry]
name = "leetcode_interview_questions"
version = "0.1.0"
description = ""
authors = ["Ryan Cammer <ryancammer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.1.14"]
build-backend = "poetry.core.masonry.api"
